--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.hjy</groupId>
-    <artifactId>alogrithm</artifactId>
+    <artifactId>algorithm</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
